# oto

./: .gitignore  README.md  design-qa.md  errorfix.md  install.sh  oto-details.md  package-lock.json  package.json  tokens.css
.github/workflows/: ci.yml  release.yml
.hallmark/: log.json  preflight.json
docs/superpowers/plans/: 2026-07-19-oto-mvp.md
docs/superpowers/specs/: 2026-07-19-oto-design.md
packaging/: README.md  dev.oto.app.desktop  dev.oto.app.metainfo.xml  dev.oto.app.yml
scripts/: tauri.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/audio/: capture.rs  mod.rs  wav.rs
src-tauri/src/commands/: config_cmds.rs  history_cmds.rs  mod.rs  pipeline_cmds.rs  sync_cmds.rs  test_cmds.rs
src-tauri/src/config/: mod.rs  model.rs  secrets.rs  store.rs
src-tauri/src/features/: history.rs  mod.rs  snippets.rs  sync.rs
src-tauri/src/hotkeys/: mod.rs
src-tauri/src/injection/: atspi_inject.rs  clipboard.rs  focus.rs  mod.rs  paste.rs
src-tauri/src/pipeline/: events.rs  mod.rs  orchestrator.rs
src-tauri/src/providers/: deepgram.rs  local_whisper.rs  mod.rs  openai_compat.rs  presets.rs  traits.rs
src/lib/: theme.ts  types.ts
src/lib/components/: FloatingPill.svelte  Waveform.svelte
src/lib/stores/: pipeline.ts
src/routes/: +layout.ts  +page.svelte
src/routes/overlay-preview/: +page.svelte
src/routes/settings/: +page.svelte
(+14 files in other folders)
