[package]
name = "oto"
version = "0.1.0"
description = "System-wide AI voice dictation for Linux"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.19"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "multipart", "rustls"] }
directories = "6.0.0"
dirs = "6.0.0"
keyring = "4.1.5"
cpal = "0.18.1"
hound = "3.5.1"
tauri-plugin-global-shortcut = "2.3.2"
async-trait = "0.1.91"

[dev-dependencies]
tempfile = "3.27.0"
